--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/index/index",
+    "pages/message/message",
+    "pages/about/about"
   ],
   "window": {
     "backgroundColor": "#eeeeee",
