--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
     "ignore": []
   },
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "es6": false,
     "enhance": true,
     "postcss": true,
@@ -39,7 +39,7 @@
     "showES6CompileOption": false
   },
   "compileType": "miniprogram",
-  "libVersion": "2.18.1",
+  "libVersion": "2.16.1",
   "appid": "wxfccfe1fca0dd03e9",
   "projectname": "%E6%AD%A6%E5%B7%A5%E5%95%86%E8%AF%BE%E8%A1%A8",
   "debugOptions": {
