修复了一些问题
修复了一些问题

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -23,6 +23,18 @@
           "pathName": "pages/index/index",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/score/score",
+          "pathName": "pages/score/score",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/bookinfo/bookinfo",
+          "pathName": "pages/bookinfo/bookinfo",
+          "query": "",
+          "scene": null
         }
       ]
     }
